get rid of nested lists
Also, I read through the whole spec again while doing this change, so
there is some more editing in this commit that I didn't bother splitting
out into a separate commit.

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -59,7 +59,7 @@ These criteria include at least:
 - the behavior that is expected of the recipient party upon having received the message.
 
 A **property** is a quantifiable aspect which describes the server, or the server connection over which messages concerning this property are exchanged.
-Each concrete value of a property is represented as either a `<bytestring>` or a `<list>` (as defined in section 2).
+Each concrete value of a property is represented as a `<bytestring>` (as defined in section 2).
 The value of a property may influence how the server reacts to a message from the client.
 It may also influence how the client reacts to a message from the server if (and only if) the client has subscribed to this property (see section 5.1).
 
@@ -164,8 +164,6 @@ This includes, specifically:
 - the syntax of `want`, `have` and `nope` messages as described in sections 2 and 4.
   Those message types are therefore called **eternal**.
 
-The backwards-compatibility requirement across major versions of `core` does not apply to those parts of the message syntax that can only be used after the initial `want` and `have` messages (namely, nested lists).
-
 ### 1.6. Platform integration modules
 
 Each platform is defined by a **platform integration module**, which is a VT6 module.
@@ -203,20 +201,26 @@ The sequence of bytes between the first colon and the trailing comma is called t
 
 *Rationale:* This is the [netstring encoding](https://cr.yp.to/proto/netstrings.txt) first described by Daniel J. Bernstein.
 
-#### 2.1.2. Lists
+#### 2.1.2. Messages
 
 ```abnf
-list = length "|" *( list / bytestring )
+message = "{" length "|" 1*bytestring "}"
 ```
 
-In the context of VT6 messages, a **list** is a sequence of **elements** which are either bytestrings or other lists, such that:
+A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonempty sequence of bytestrings, such that:
 
-- it is accepted by `<list>`, and
-- the number of elements are the first pipe symbol is equal to the decimal value of the sequence of ASCII digits before the first pipe symbol.
+- it is accepted by `<list>`,
+- the number of bytestrings in the sequence after the first pipe symbol is equal to the decimal value of the sequence of ASCII digits before the first pipe symbol, and
+- the value of the first bytestring is accepted by `<message-type>`.
+
+The first bytestring in a message is therefore called the message's **type**.
+Any following bytestrings are called the message's **arguments**.
+A message may have arbitrarily many arguments, including zero arguments.
 
 *Rationale:* We avoid compactly-coded escape sequences like those specified by [ECMA-48](https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-48,%202nd%20Edition,%20August%201979.pdf) aka ANSI&nbsp;X3.64 aka ISO/IEC&nbsp;6429 because of the risk that escape sequences specified by different modules collide with each other.
-We choose netstring-derived lists because they can be implemented very easily, both on the generating and on the parsing side.
-They are as flexible and human-readable as s-expressions, JSON, TOML or YAML, but at the same time more compact than either of those.
+We choose an adaptation of the netstring format because it can be implemented very easily, both on the generating and on the parsing side.
+We use different sigils for argument lists (the pipe symbol) and bytestrings (the colon symbol), so that the syntax can later be expanded to allow for nested lists.
+The curly brackets that enclose messages serve as a sequence point where parsing can be resumed after a parsing error (see section 2.3).
 
 ### 2.1.3. Human-readable representation
 
@@ -224,47 +228,13 @@ Within specifications, the following alternative representation for bytestrings 
 
 - Bytestrings whose value matches the regular expression `^[A-Za-z0-9._-]*$` are represented directly by their value.
 - Other bytestrings are represented as C string literals with the same value.
-- Lists are represented by a whitespace-separated concatenation of the representations of their elements, enclosed in parentheses.
+- Messages are represented by a whitespace-separated concatenation of the representations of the bytestrings contained in it, enclosed in parentheses.
 
 *Rationale:* This format is much more human-readable and thus better suited for examples within specifications, or for diagnostic output of programs that process VT6 messages.
 
-The following snippet shows alternative representations of several example bytestrings and lists.
+For example, a human-readable representation of the message `{3|8:core.set,13:example.title,11:hello "world",}` is `(core.set example.title "hello \"world\"")`.
 
-```
-example:      11:hello world,
-alternative:  "hello world"
-
-example:      5:hello,
-alternative:  hello
-
-example:      2|5:hello,5:world,
-alternative:  (hello world)
-
-example:      3|2|3:foo,3:bar,3:abc,3:def,
-alternative:  ((foo bar) abc def)
-
-example:      2|2|3:foo,3:bar,2|3:abc,3:def,
-alternative:  ((foo bar) (abc def))
-
-example:      0|
-alternative:  ()
-
-example:      1|0:,
-alternative:  ("")
-```
-
-### 2.2. Message format
-
-```abnf
-message = "{" list "}"
-```
-
-A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonempty list enclosed in curly brackets whose first element is a bytestring whose value is accepted by `<message-type>`.
-The first element of a message is therefore called the message's **type**.
-Any following elements of a message are called the message's **arguments**.
-A message may have arbitrarily many arguments, including zero arguments.
-
-*Rationale:* The curly brackets that enclose messages serve as a sequence point where parsing can be resumed after a parsing error (see section 2.4).
+### 2.1.4. Message streams
 
 ```abnf
 message-stream = *( *space message ) *space
@@ -282,7 +252,7 @@ escape-char = %x1B
 
 A message stream is **fenced** when it is preceded by one ESC character and succeeded by another ESC character.
 
-### 2.3. Server-client communication
+### 2.2. Server-client communication
 
 When a VT6 client is running in normal mode, it sends messages to its server by writing a message stream into a server connection, and receives messages from the server by reading a message stream from the same server connection.
 Furthermore, it can read input data from standard input and write output data to standard output.
@@ -300,7 +270,7 @@ The magic string is not considered to be part of the output data nor does it sta
 If the client fails to do so, all data written by the client into its standard output MUST be considered output data and the escaping rule for ESC characters does not apply.
 Furthermore, fenced message streams MUST NOT be written into the client's standard input, and the escaping rule for ESC characters does not apply to the input data written into it, either.
 
-### 2.4. Invalid messages, and handling thereof
+### 2.3. Invalid messages, and handling thereof
 
 A message is **invalid** if...
 
@@ -320,7 +290,7 @@ If, while parsing a message stream, a recipient finds a message that cannot be p
 2. Try to parse a message starting from this character.
 3. If no valid message could be read, go back to step 1.
 
-### 2.5. Predefined property types
+### 2.4. Predefined property types
 
 When a property is said to **accept string values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value is a properly UTF-8-encoded string.
 
@@ -336,14 +306,14 @@ sign = "+" / "-"
 When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<integer>` grammar element defined above.
 Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<unsigned-integer>` grammar element defined above.
 
-In both these cases, the numerical value of each such bytestring is that value which is returned when the `atoll()` function as defined in [the POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/functions/atoll.html) is applied to the value of the bytestring.
+In both these cases, the numerical value of each such bytestring is the decimal value of the sequence of digits in the bytestring's value.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
 Section 6 of this specification uses the property types defined in this section.
 Other module specifications which use some or all of the property types defined in this section SHALL reference this section.
 The recommended way to do so is by including the following sentence near the start of the specification:
 
-> This document uses the predefined property types from section 2.5 of `vt6/core1.0`.
+> This document uses the predefined property types from section 2.4 of `vt6/core1.0`.
 
 ## 3. Protocol negotiation
 
@@ -359,6 +329,7 @@ Each argument MUST be a bytestring.
 
 A client can send a `want` message to the server to request usage of a module.
 The first argument MUST be the module name, and the remaining arguments SHALL be the major versions of that module that the client supports.
+Each major version MUST be formatted according to the `<major-version>` grammar element defined above.
 For example, the following `want` message indicates that the client wants to use either major version 1 or major version 2 of the `example` module.
 
 ```vt6
@@ -385,14 +356,14 @@ The module version MUST be formatted according to the `<full-version>` grammar e
 The major version contained therein MUST be one of the major versions that appeared in the original `want` message.
 
 The server MUST NOT agree to using a module if it does not support any of the major versions of that module which were offered in the `want` message.
-The server MUST NOT agree to using multiple major versions of the same module, neither in a single `have` message or across multiple `have` messages on the same server connection.
+The server MUST NOT agree to using multiple major versions of the same module across multiple `have` messages on the same server connection.
 The server MAY agree to using different major versions of the same module on different server connections.
 
 When a `want` message concerns the same module as an earlier `want` message, the server MUST reply consistently.
 If it agreed to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST agree to this major version and offer the same full version as in the earlier `have` message.
 If it did not agree to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST NOT agree to this major version.
 
-The following snippet shows examples of valid and invalid streams of `want` messages and `have` replies.
+The following snippet shows examples of streams of `want` messages and `have` replies.
 Each set of messages, as separated by an empty line, is to be considered as occurring on separate server connections.
 
 ```vt6
@@ -448,9 +419,8 @@ The argument is the name of that property.
 
 *Rationale:* It is intentional that subscribing to a property is the only way for a client to retrieve a property's value.
 This design nudges implementors towards handling server-initiated changes to properties properly.
-Clients which only want to get the value of a property once are free to ignore subsequent `core.pub` messages.
 
-A `core.sub` message is invalid (within the meaning of section 2.4) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
+A `core.sub` message is invalid (within the meaning of section 2.3) if its argument is not the name of a property, or if it is defined by a module or module version to whose usage the server has not agreed.
 
 When a server receives a valid `core.sub` message, it MUST subscribe the sending client to the specified property, and immediately notify the client with a corresponding `core.pub` message (see below).
 
@@ -463,7 +433,7 @@ A server can send a `core.pub` message to inform a client of the value of a prop
 The first argument SHALL be the name of a property.
 The second argument SHALL be the value of that property.
 
-A `core.pub` message is invalid (within the meaning of section 2.4) if its first argument is:
+A `core.pub` message is invalid (within the meaning of section 2.3) if its first argument is:
 
 - not the name of a property,
 - the name of a property in a module to whose usage the server has not agreed, or
@@ -471,7 +441,7 @@ A `core.pub` message is invalid (within the meaning of section 2.4) if its first
 
 Moreover, a `core.pub` message is invalid if its second argument is not a valid value for the property in question according to the specification defining the property.
 
-A `core.pub` message can be sent by the server at any time to notify the client of changes to the values of properties that the client has subscribed to.
+A `core.pub` message can be sent by the server at any time to notify the client of changes to the values of a property that the client has subscribed to.
 Upon receiving a valid `core.sub` or `core.set` message, the server MUST reply immediately with a `core.pub` message for the same property.
 
 ### 5.3. The `core.set` message
@@ -482,14 +452,14 @@ Upon receiving a valid `core.sub` or `core.set` message, the server MUST reply i
 A client can send a `core.set` message to change the value of a property.
 The argument list of a `core.set` message has the same form as that of a `core.pub` message (a pair of property name and value).
 
-A `core.set` message is invalid (within the meaning of section 2.4) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
+A `core.set` message is invalid (within the meaning of section 2.3) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
 
-The message is _not_ invalid if the second argument is a value that is not permissible for the property in question.
+The message is _not_ invalid if the second argument is a value that is not permissible for the property in question, and the message is otherwise valid.
 
 *Rationale:* For non-trivial properties, the client might not have enough information to decide whether a given value is valid.
 
 Setting a property implies subscribing to the property.
-That is, a `core.set` message sent from a client to a server implies a `core.sub` message from the same client to the same server for the same property.
+That is, a `core.set` message implies a `core.sub` message on the same server connection for the same property.
 This does not mean, however, that a separate `core.pub` message must be sent to answer the implied `core.sub` message.
 For example:
 
@@ -509,7 +479,7 @@ The server may refuse to change the property's value at all (especially if the p
 This is why a `core.pub` message is sent as a reply for a `core.set` message.
 The client SHOULD observe the `core.pub` reply to learn whether the requested changes were accepted.
 
-*Rationale:* For example, consider the case of the client trying to set `core.client-msg-bytes-max` to `32768`.
+*Rationale:* For example, consider the case of the client trying to set `core.client-msg-bytes-max` to a larger value.
 The server might reject this, and report the previous value in the `core.pub` response; or it might choose a value inbetween the previous and the requested value because it absolutely cannot process messages larger than that.
 
 ## 6. Properties for `vt6/core1.0`
