adjust prologues for the other modules to match new format in core1.0

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -1,8 +1,7 @@
 <!-- draft -->
 # `vt6/posix1.0` - Platform integration on POSIX-compliant systems
 
-This document specifies version `1.0` of the VT6 module `posix`.
-Refer to this document using the identifier `vt6/posix1.0` or its canonical URL <https://vt6.io/std/posix/1.0/>.
+The canonical URL for this document is <https://vt6.io/std/posix/1.0/>.
 
 **This is a non-normative draft.**
 
