--- a/spec/sig/1.0.md
+++ b/spec/sig/1.0.md
@@ -1,8 +1,7 @@
 <!-- draft -->
 # `vt6/sig1.0` - Signal delivery from server to client
 
-This document specifies version `1.0` of the VT6 module `sig`.
-Refer to this document using the identifier `vt6/sig1.0` or its canonical URL <https://vt6.io/std/sig/1.0/>.
+The canonical URL for this document is <https://vt6.io/std/sig/1.0/>.
 
 **This is a non-normative draft.**
 
