--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -155,7 +155,7 @@ The following changes to a module specification are considered **backwards-compa
 Every other change to a module specification is considered **backwards-incompatible**, especially:
 
 - removal of a message type or property
-- change of behavior of an existing message type or property in such a way that there may exist programs that conform to the previous minor version of the specification, but not to the current one
+- change of behavior of an existing message type or property in such a way that there may exist programs that conform to the previous module version, but not to the current one
 
 As an additional rule, all versions of the `core` module MUST be backwards-compatible with the parts of this specification that relate to all client and server behavior that takes place before a concrete version of the `core` module has been agreed to by the server (see section 3).
 This includes, specifically:
@@ -224,7 +224,7 @@ The curly brackets that enclose messages serve as a sequence point where parsing
 
 ### 2.1.3. Human-readable representation
 
-Within specifications, the following alternative representation for bytestrings and lists can be used:
+The following alternative representation for bytestrings and messages may be used when showing messages in specifications or informational displays, such as logs:
 
 - Bytestrings whose value matches the regular expression `^[A-Za-z0-9._-]*$` are represented directly by their value.
 - Other bytestrings are represented as C string literals with the same value.
