--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -192,7 +192,7 @@ length = "0" | nzdigit *digit
 bytestring = length ":" *byte ","
 ```
 
-In the context of VT6 messages, a **bytestring** is a sequence of bytes which is:
+In the context of VT6 messages, a **bytestring** is a sequence of bytes such that:
 
 - it is accepted by `<bytestring>`, and
 - the number of bytes between the first colon and the trailing comma is equal to the decimal value of the sequence of ASCII digits before the first colon.
@@ -282,7 +282,7 @@ A message is **invalid** if...
 
 - the message type is unknown or its use has not been agreed to by the server (see section 3).
 
-Receipt of an invalid message MUST NOT cause any effect that can be observed by the sender, except for error responses that only occur for invalid messages (see section 4.1).
+Receipt of an invalid message MUST NOT cause any effect (besides error responses, see section 4.1) that can be observed by the sender.
 
 If, while parsing a message stream, a recipient finds a message that cannot be parsed (either because of syntax errors or because the message exceeds the recipient's maximum message size), the recipient SHOULD employ the following algorithm to reset the stream parser and find the next well-formed message.
 
@@ -306,7 +306,7 @@ sign = "+" / "-"
 When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<integer>` grammar element defined above.
 Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<unsigned-integer>` grammar element defined above.
 
-In both these cases, the numerical value of each such bytestring is the decimal value of the sequence of digits in the bytestring's value.
+In both these cases, the **numerical value** of each such bytestring is the decimal value of the sequence of digits in the bytestring's value.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
 Section 6 of this specification uses the property types defined in this section.
@@ -318,7 +318,7 @@ The recommended way to do so is by including the following sentence near the sta
 ## 3. Protocol negotiation
 
 Before a client can use the message types and properties of a module, usage of the module must have been agreed to by the server.
-A server **agrees to** using a module by answering a `want` message from the client with a `have` message.
+A server **agrees to** using a module by answering a `want` message from the client with a corresponding `have` message.
 
 ### 3.1. The `want` message
 
@@ -454,7 +454,7 @@ The argument list of a `core.set` message has the same form as that of a `core.p
 
 A `core.set` message is invalid (within the meaning of section 2.3) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
 
-The message is _not_ invalid if the second argument is a value that is not permissible for the property in question, and the message is otherwise valid.
+The message is *not* invalid if the second argument is a value that is not permissible for the property in question, and the message is otherwise valid.
 
 *Rationale:* For non-trivial properties, the client might not have enough information to decide whether a given value is valid.
 
