fix heading levels

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -222,7 +222,7 @@ We choose an adaptation of the netstring format because it can be implemented ve
 We use different sigils for argument lists (the pipe symbol) and bytestrings (the colon symbol), so that the syntax can later be expanded to allow for nested lists.
 The curly brackets that enclose messages serve as a sequence point where parsing can be resumed after a parsing error (see section 2.3).
 
-### 2.1.3. Human-readable representation
+#### 2.1.3. Human-readable representation
 
 The following alternative representation for bytestrings and messages may be used when showing messages in specifications or informational displays, such as logs:
 
@@ -234,7 +234,7 @@ The following alternative representation for bytestrings and messages may be use
 
 For example, a human-readable representation of the message `{3|8:core.set,13:example.title,11:hello "world",}` is `(core.set example.title "hello \"world\"")`.
 
-### 2.1.4. Message streams
+#### 2.1.4. Message streams
 
 ```abnf
 message-stream = *( *space message ) *space
