--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -177,7 +177,7 @@ A platform integration module MAY define message types and properties which are 
 
 The following platform integration modules are available at the time of publication of this document:
 
-- [vt6/posix](../posix/) for operating systems that implement the POSIX specification
+- [vt6/posix](../../posix/) for operating systems that implement the POSIX specification
 
 ## 2. Messages
 
