consistent wording: "text stream" -> "byte stream", "bytestring" -> "byte string"

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -28,11 +28,11 @@ If no VT6 server is present, the client process SHALL not be considered a VT6 cl
 
 ### 1.2. Server connections
 
-A **bidirectional text stream** is an object from which byte strings can be read and into which byte strings can be written.
-A VT6 client SHALL have access to a bidirectional text stream, which is called this client's **standard input/output**.
+A **bidirectional byte stream** is an object from which byte strings can be read and into which byte strings can be written.
+A VT6 client SHALL have access to a bidirectional byte stream, which is called this client's **standard input/output**.
 
-A platform MAY define a method by which clients can gain access to further bidirectional text streams.
-Text streams obtained through this method are called **server connections**.
+A platform MAY define a method by which clients can gain access to further bidirectional byte streams.
+byte streams obtained through this method are called **server connections**.
 When a client writes a byte string into a server connection, it MUST NOT be received by any process but this client's server.
 When a client reads a byte string from a server connection, it SHALL have been sent by this client's server.
 The server SHALL be able to distinguish between server connections opened by different clients, as well as different server connections opened by the same client.
@@ -44,7 +44,7 @@ In POSIX, the server connection replaces the [special capabilities of terminal d
 If a VT6 client has a method to obtain server connections, it is said to be operating in **normal mode**.
 Otherwise, it is said to be operating in **multiplexed mode**.
 
-*Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional text stream to their server and have no way of establishing a separate bidirectional text stream to use as a server connection.
+*Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional byte stream to their server and have no way of establishing a separate bidirectional byte stream to use as a server connection.
 The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
 
 ### 1.3. Message types and properties
@@ -59,7 +59,7 @@ These criteria include at least:
 - the behavior that is expected of the recipient party upon having received the message.
 
 A **property** is a quantifiable aspect which describes the server, or the server connection over which messages concerning this property are exchanged.
-Each concrete value of a property is represented as a `<bytestring>` (as defined in section 2).
+Each concrete value of a property is represented as a `<byte-string>` (as defined in section 2).
 The value of a property may influence how the server reacts to a message from the client.
 It may also influence how the client reacts to a message from the server if (and only if) the client has subscribed to this property (see section 5.1).
 
@@ -183,52 +183,52 @@ The following platform integration modules are available at the time of publicat
 
 ### 2.1. Syntax
 
-#### 2.1.1. Bytestrings
+#### 2.1.1. Byte strings
 
 ```abnf
 byte   = %x00-FF ; any single byte
 length = "0" | nzdigit *digit
 
-bytestring = length ":" *byte ","
+byte-string = length ":" *byte ","
 ```
 
-In the context of VT6 messages, a **bytestring** is a sequence of bytes such that:
+In the context of VT6 messages, a **byte string** is a sequence of bytes such that:
 
-- it is accepted by `<bytestring>`, and
+- it is accepted by `<byte-string>`, and
 - the number of bytes between the first colon and the trailing comma is equal to the decimal value of the sequence of ASCII digits before the first colon.
 
-The sequence of bytes between the first colon and the trailing comma is called the **value** of the bytestring.
+The sequence of bytes between the first colon and the trailing comma is called the **value** of the byte string.
 
 *Rationale:* This is the [netstring encoding](https://cr.yp.to/proto/netstrings.txt) first described by Daniel J. Bernstein.
 
 #### 2.1.2. Messages
 
 ```abnf
-message = "{" length "|" 1*bytestring "}"
+message = "{" length "|" 1*byte-string "}"
 ```
 
-A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonempty sequence of bytestrings, such that:
+A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonempty sequence of byte strings, such that:
 
 - it is accepted by `<list>`,
-- the number of bytestrings in the sequence after the first pipe symbol is equal to the decimal value of the sequence of ASCII digits before the first pipe symbol, and
-- the value of the first bytestring is accepted by `<message-type>`.
+- the number of byte strings in the sequence after the first pipe symbol is equal to the decimal value of the sequence of ASCII digits before the first pipe symbol, and
+- the value of the first byte string is accepted by `<message-type>`.
 
-The first bytestring in a message is therefore called the message's **type**.
-Any following bytestrings are called the message's **arguments**.
+The first byte string in a message is therefore called the message's **type**.
+Any following byte strings are called the message's **arguments**.
 A message may have arbitrarily many arguments, including zero arguments.
 
 *Rationale:* We avoid compactly-coded escape sequences like those specified by [ECMA-48](https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-48,%202nd%20Edition,%20August%201979.pdf) aka ANSI&nbsp;X3.64 aka ISO/IEC&nbsp;6429 because of the risk that escape sequences specified by different modules collide with each other.
 We choose an adaptation of the netstring format because it can be implemented very easily, both on the generating and on the parsing side.
-We use different sigils for argument lists (the pipe symbol) and bytestrings (the colon symbol), so that the syntax can later be expanded to allow for nested lists.
+We use different sigils for argument lists (the pipe symbol) and byte strings (the colon symbol), so that the syntax can later be expanded to allow for nested lists.
 The curly brackets that enclose messages serve as a sequence point where parsing can be resumed after a parsing error (see section 2.3).
 
 #### 2.1.3. Human-readable representation
 
-The following alternative representation for bytestrings and messages may be used when showing messages in specifications or informational displays, such as logs:
+The following alternative representation for byte strings and messages may be used when showing messages in specifications or informational displays, such as logs:
 
-- Bytestrings whose value matches the regular expression `^[A-Za-z0-9._-]*$` are represented directly by their value.
-- Other bytestrings are represented as C string literals with the same value.
-- Messages are represented by a whitespace-separated concatenation of the representations of the bytestrings contained in it, enclosed in parentheses.
+- Byte strings whose value matches the regular expression `^[A-Za-z0-9._-]*$` are represented directly by their value.
+- Other byte strings are represented as C string literals with the same value.
+- Messages are represented by a whitespace-separated concatenation of the representations of the byte strings contained in it, enclosed in parentheses.
 
 *Rationale:* This format is much more human-readable and thus better suited for examples within specifications, or for diagnostic output of programs that process VT6 messages.
 
@@ -292,7 +292,7 @@ If, while parsing a message stream, a recipient finds a message that cannot be p
 
 ### 2.4. Predefined property types
 
-When a property is said to **accept string values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value is a properly UTF-8-encoded string.
+When a property is said to **accept string values**, this means that the set of acceptable values for this property is the set of all byte strings whose value is a properly UTF-8-encoded string.
 
 *Rationale:* [utf8everywhere.org](http://utf8everywhere.org) nicely sums up the arguments for not bothering with other text encodings.
 
@@ -303,10 +303,10 @@ unsigned-integer = "0" / ( nzdigit *digit )
 sign = "+" / "-"
 ```
 
-When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<integer>` grammar element defined above.
-Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<unsigned-integer>` grammar element defined above.
+When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all byte strings whose value matches the `<integer>` grammar element defined above.
+Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all byte strings whose value matches the `<unsigned-integer>` grammar element defined above.
 
-In both these cases, the **numerical value** of each such bytestring is the decimal value of the sequence of digits in the bytestring's value.
+In both these cases, the **numerical value** of each such byte string is the decimal value of the sequence of digits in the byte string's value.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
 Section 6 of this specification uses the property types defined in this section.
@@ -325,8 +325,6 @@ A server **agrees to** using a module by answering a `want` message from the cli
 - Directionality: client to server
 - Number of arguments: two or more
 
-Each argument MUST be a bytestring.
-
 A client can send a `want` message to the server to request usage of a module.
 The first argument MUST be the module name, and the remaining arguments SHALL be the major versions of that module that the client supports.
 Each major version MUST be formatted according to the `<major-version>` grammar element defined above.
@@ -344,8 +342,6 @@ The first message that a client sends on each server connection MUST be a `want`
 
 - Directionality: server to client
 - Number of arguments: zero or two
-
-Each argument MUST be a bytestring.
 
 Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate if it agrees to using the requested module.
 If the `want` message is valid, but the server does not agree to the requested module, it MUST reply with a `have` message with zero arguments.
