--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -20,11 +20,11 @@ POSIX allows processes to be started while a VT6 server is not present.
 Therefore, VT6 clients MUST use the following method to determine whether a VT6 server is present.
 
 1. If the `VT6` environment variable is present, its content is the absolute path to a socket file.
-   In this case, the VT6 client SHALL assume that a VT6 server is present, and operate in normal mode.
+   In this case, the VT6 client SHALL assume that a VT6 server is present.
    To obtain a server connection, the VT6 client SHALL connect to this socket file with socket type `SOCK_SEQPACKET`, and upon success, use the open socket as a server connection.
    When the connection to the socket fails, the VT6 client MAY either bail out, or continue to operate as if no VT6 server is present.
 
-2. If the `TERM` environment variable is present and contains the string `vt6`, the VT6 client SHALL assume that a VT6 server is present, and operate in multiplexed mode.
+2. If the `TERM` environment variable is present and contains the string `vt6`, the VT6 client SHALL assume that a VT6 server is present, but that there is no method to obtain server connections.
 
 3. If the `VT6` environment variable is absent and the `TERM` environment variable does not contain the string `vt6`, the VT6 client MUST consider the VT6 server to be absent.
 
