early draft for vt6/term and vt6/mono
This is based on an earlier draft where monospace layouting was a
capability within vt6/term. I chose to make an entirely new branch
because so much has changed in vt6/core1.0 recently that stuff is way
cleaner this way.

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -37,6 +37,12 @@ Analogously, when a property is said to **accept unsigned integer values**, this
 In both these cases, the **numerical value** of each such byte string is the decimal value of the sequence of digits in the byte string's value, possibly negated by a sign.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
+```abnf
+boolean = "t" / "f"
+```
+
+When a property is said to **accept boolean values**, this means that the set of acceptable values for this property consists of the two single-character strings `t` (true) and `f` (false).
+
 Module specifications which use some or all of the property types defined in this section SHALL reference this section.
 The recommended way to do so is by including the following sentence near the start of the specification:
 
