--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -267,7 +267,7 @@ When a VT6 client has a method of obtaining server connections (see section 1.1)
 *Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional byte stream to their server and have no direct way of establishing separate server connections.
 The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
 Most clients will not need to implement multiplexed mode.
-The remote login protocol (e.g. the SSH server) SHOULD launch a muxer to provide the remote clients with a proper VT6 server.
+The remote login provider (e.g. the SSH server) should be connected to a muxer to provide the remote clients with a proper VT6 server.
 
 A client can attempt to upgrade its standard input/output from stdio mode into multiplexed mode with the following procedure:
 
