initial spec for the posix.to-{stdin,stdout} message types

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -12,7 +12,9 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 Operating systems that implement the [POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/) are admissible environments for VT6 clients and servers.
 This module defines how various platform-specific mechanisms throughout VT6 work on such operating systems.
 
-## 2. Definitions for the `vt6/core1.0` module
+## 2. Definitions
+
+### 2.1. Definitions for the `vt6/core1.0` module
 
 Standard input and output for each VT6 client are the file descriptors 0 and 1 of that process, respectively.
 
@@ -28,7 +30,7 @@ Therefore, VT6 clients MUST use the following method to determine whether a VT6 
 
 3. If the `VT6` environment variable is absent and the `TERM` environment variable does not contain the string `vt6`, the VT6 client MUST consider the VT6 server to be absent.
 
-## 3. Definitions for the `vt6/sig1.0` module
+### 2.2. Definitions for the `vt6/sig1.0` module
 
 VT6 signals are dispatched to clients by sending the corresponding POSIX signals to the client processes:
 
@@ -42,3 +44,22 @@ When there is a signal dispatcher, the signal dispatcher SHALL use at least one 
 If the signal dispatcher can distinguish between client processes running in the foreground or in the background, it SHOULD use multiple process groups to track which processes are running in the foreground and send the POSIX signals to the current foreground process group only.
 
 When a server or signal dispatcher uses the `SIGSTOP` signal to suspend processes, the `SIGCONT` signal SHALL be used to resume these processes once the user instructs the server or signal dispatcher to do so.
+
+## 3. Message types for `vt6/posix1.0`
+
+### 3.1. The `posix.to-stdin` and `posix.to-stdout` messages
+
+- Directionality: both
+- Number of arguments: zero
+
+Upon receiving a valid `posix.to-stdin` or `posix.to-stdout` message, a server MUST reply with an identical message on the same server connection.
+Messages of this type are invalid when transmitted in a fenced message stream over a bidirectional byte stream in multiplexed mode.
+
+These two message types SHALL otherwise be considered identical to `core.to-stdio`, except that the following restrictions apply to the bidirectional byte stream over which they are exchanged:
+
+* When a stream has been set into stdio mode by a pair of `posix.to-stdin` messages, the client SHALL NOT write any bytes into the stream, and the server SHALL disregard any bytes it reads from the stream.
+* When a stream has been set into stdio mode by a pair of `posix.to-stdout` messages, the server SHALL NOT write any bytes into the stream, and the client SHALL disregard any bytes it reads from the stream.
+
+*Rationale:* These messages can be used to set up separate standard input and output channels that can be closed separately.
+When a shell sets up a command's stdin and stdout using separate bidirectional byte streams, the server can approximate the traditional Ctrl-D behavior by closing the command's standard input (i.e., the bidirectional byte stream most recently set into stdio mode by a pair of `posix.to-stdin` messages), then reading the remaining output from the command's standard output.
+If the command was instead connected by a single bidirectional byte stream which was set up with `core.to-stdio` messages, closing the standard input in order to terminate the client would make it impossible for the server to read standard output that was printed during shutdown (which for some programs, e.g. `sort(1)`, is all output).
