--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -53,12 +53,13 @@ When a server or signal dispatcher uses the `SIGSTOP` signal to suspend processe
 - Number of arguments: zero
 
 Upon receiving a valid `posix.to-stdin` or `posix.to-stdout` message, a server MUST reply with an identical message on the same server connection.
-Messages of this type are invalid when transmitted in a fenced message stream over a bidirectional byte stream in multiplexed mode.
+Messages of this type are invalid when transmitted over a bidirectional byte stream in multiplexed mode.
 
-These two message types SHALL otherwise be considered identical to `core.to-stdio`, except that the following restrictions apply to the bidirectional byte stream over which they are exchanged:
+These two message types SHALL otherwise be considered identical to `core.to-stdio`, except that they switch their bidirectional byte stream into **stdin mode** and **stdout mode**, respectively.
 
-* When a stream has been set into stdio mode by a pair of `posix.to-stdin` messages, the client SHALL NOT write any bytes into the stream, and the server SHALL disregard any bytes it reads from the stream.
-* When a stream has been set into stdio mode by a pair of `posix.to-stdout` messages, the server SHALL NOT write any bytes into the stream, and the client SHALL disregard any bytes it reads from the stream.
+A bidirectional byte stream in stdin mode behaves as though in stdio mode, except that the client SHALL NOT write any bytes into the stream, and the server SHALL disregard any bytes it reads from the stream.
+
+A bidirectional byte stream in stdout mode behaves as though in stdio mode, except that the server SHALL NOT write any bytes into the stream, and the client SHALL disregard any bytes it reads from the stream.
 
 *Rationale:* These messages can be used to set up separate standard input and output channels that can be closed separately.
 When a shell sets up a command's stdin and stdout using separate bidirectional byte streams, the server can approximate the traditional Ctrl-D behavior by closing the command's standard input (i.e., the bidirectional byte stream most recently set into stdio mode by a pair of `posix.to-stdin` messages), then reading the remaining output from the command's standard output.
